changes to style

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,61 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// Place all the styles related to the users controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+/* Public stylesheet */
+
+/* Colors
+red:          #993120
+green:        #94B26F
+light green:  #B6D491
+yellow:       #F2DC87
+dark brown:   #332318
+light brown:  #4C2516
+*/
+
+
+head { color: #332318;}
+html { height: 100%; width: 100%; }
+body { width: 100%; min-width: 980px; height: 100%; margin: 55px; padding: 0; 
+  background:#444433; 
+  background-image:url('test.jpg');
+  
+  font: 33px Verdana,Lucida,Arial,Helvetica,sans-serif; color: #F2DC87; }
+
+p, td, ul, ol, li, dl, dt, dd { 
+  font-family: Verdana,Lucida,Arial,Helvetica,sans-serif; }
+img { border: none; }
+table { border-collapse: collapse; margin: auto;}
+table tr th, table tr td { vertical-align: top; font: 20px Verdana,Lucida,Arial,Helvetica,sans-serif; 
+  padding: 3px; color: #332318;}
+a, a:visited { color: #993120; }
+a:hover {}
+
+.clear { clear: both; }
+.center { text-align: center; }
+
+/* Structure */
+ header { height: 4em; padding-top: 1em; text-align: center; 
+  background: #993120; color:  #B6D491; }
+  h1 { margin: 1px; padding: 0; text-align:center;  font: 20px Verdana,Lucida,Arial,Helvetica,sans-serif;    color:  #94B26F;}
+  h2 { margin: 2px; padding: 0; text-align:center;  font: 30px Verdana,Lucida,Arial,Helvetica,sans-serif;    color: #332318;}
+
+#main { min-height: 500px; background: #F2DC87; }
+#navigation { float: left; width: 180px; min-height: 480px; padding: 10px; 
+  background: #94B26F; color: #4C2516; }
+#content { padding: 10px; }
+#footer { clear: both; height: 2.5em; text-align: right;
+  background: #4C2516; color: #F2DC87; }
+#footer p { margin: 0; padding: 0.5em 1em; }
+
+/* Navigation */
+#navigation ul { list-style: none; margin: 0; padding: 0; }
+#navigation ul li { margin-bottom: 0.5em; }
+#navigation ul ul { margin: 0.5em 0 0 1em; font-size: 0.9em; }
+#navigation a { text-decoration: none; padding: 1px 3px;}
+#navigation a:hover { background: #F2DC87; }
+
+/* Content */
+content h2 { color: #4C2516; }
